# Mail-app2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
Wiki/: android-client-guide.md  environment-setup.md  web-client-guide.md
android_app/app/: .gitignore  build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/android_app/: AppDatabase.java  Converters.java  MainActivity.java  MyApplication.java
android_app/app/src/main/java/com/example/android_app/adapters/: MailAdapter.java
android_app/app/src/main/java/com/example/android_app/api/: LabelApi.java  MailApi.java  RetrofitClient.java  UserApi.java
android_app/app/src/main/java/com/example/android_app/core/: AppDatabase.java  Converters.java  MyApplication.java
android_app/app/src/main/java/com/example/android_app/dao/: LabelDao.java  MailDao.java  UserDao.java
android_app/app/src/main/java/com/example/android_app/dialogs/: ProfileDialog.java
android_app/app/src/main/java/com/example/android_app/entity/: Label.java  Mail.java  User.java
android_app/app/src/main/java/com/example/android_app/repository/: LabelRepository.java  MailRepository.java  UserRepository.java
android_app/app/src/main/java/com/example/android_app/response/: TokenResponse.java
android_app/app/src/main/res/drawable/: ic_star.xml  ic_star_border.xml  search_background.xml
android_app/app/src/main/res/layout/: activity_login.xml  activity_mail_info.xml  activity_mail_send.xml  activity_mails.xml  activity_register.xml  dialog_labels.xml  dialog_manage_labels.xml  drawer_header.xml  item_label_row.xml  labels_footer.xml  mail_item.xml  search_toolbar.xml
android_app/app/src/main/res/menu/: drawer_menu.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_app/app/src/main/res/values-night/: colors.xml  themes.xml
android_app/gradle/wrapper/: gradle-wrapper.properties
src/: App.cpp  App.h  AppTests.cpp  BloomFilter.cpp  BloomFilter.h  CommandParser.cpp  CommandParser.h  CommandParser_test.cpp  Dockerfile.test  RepeatableHashFunction.cpp  RepeatableHashFunction.h  SaveToFilter.cpp  SaveToFilter.h  Server.cpp  Server.h  ServerTests.cpp  UrlStore.cpp  addUrl.cpp  addUrl.h  add_url_test.cpp  app.js  checkUrl.cpp  checkUrl.h  check_url_test.cpp  client.py  deleteUrl.cpp  main.cpp  server.js
src/android_app/: settings.gradle.kts
src/android_app/app/: build.gradle.kts
src/android_app/app/src/main/: AndroidManifest.xml
src/android_app/app/src/main/res/values/: strings.xml  themes.xml
src/android_app/app/src/main/res/values-night/: themes.xml
src/android_app/gradle/wrapper/: gradle-wrapper.properties
src/controllers/: blacklistController.js  labelsController.js  mailsController.js  tokensController.js  usersController.js
src/cpp/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Dockerfile  Dockerfile.server  Server.cpp  Server.h  main.cpp  server
src/cpp/IO/: ConsoleIO.cpp  ConsoleIO.h  IO.h
src/cpp/commands/: Icommand.h  LoadFromFilter.cpp  LoadFromFilter.h  SaveToFilter.cpp  addUrl.cpp  checkUrl.cpp  checkUrl.h  deleteUrl.h
src/cpp/storage/: BloomFilter.cpp  BloomFilter.h  UrlStore.cpp  UrlStore.h
src/cpp/tests/: ServerTests.cpp  add_url_test.cpp  check_url_test.cpp
src/cpp_server/: CMakeLists.txt  CommandParser.h  Dockerfile.server  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/cpp_server/commands/: LoadFromFilter.cpp  addUrl.cpp  addUrl.h  deleteUrl.cpp
src/cpp_server/storage/: BloomFilter.cpp  BloomFilter.h  UrlStore.cpp  UrlStore.h
src/cpp_server/tests/: BloomFilterPersistenceTests.cpp  BloomFilterTest.cpp  CommandParser_test.cpp  Dockerfile.test  RepeatableHashFunctionTest.cpp  ServerTests.cpp  add_url_test.cpp  check_url_test.cpp  delete_url_test.cpp
src/middleware/: authMiddleware.js
src/models/: Mail.js  User.js
src/nodejs_server/: Dockerfile  app.js  package-lock.json  package.json  server.js
src/nodejs_server/config/: .env.local
src/nodejs_server/controllers/: blacklistController.js  labelsController.js  mailsController.js  tokensController.js  usersController.js
src/nodejs_server/middleware/: authMiddleware.js  multer.js
src/nodejs_server/models/: Label.js  Mail.js  User.js
src/nodejs_server/routes/: blacklistRoutes.js  labelsRoutes.js  mailsRoutes.js  usersRoutes.js
src/nodejs_server/services/: BlacklistService.js  LabelService.js  MailService.js  UserService.js
src/python/: Dockerfile.client  client.py  main.py
src/python/IO/: console_io.py  io_interface.py
src/react_client/: Dockerfile.react  package-lock.json  package.json
src/react_client/public/: index.html  manifest.json
src/react_client/src/: App.js  index.js
src/react_client/src/components/auth/: ImageUploader.css  ImageUploader.jsx  LoginForm.css  LoginForm.jsx  RegisterForm.css  RegisterForm.jsx  RegisterInput.jsx
src/react_client/src/components/layout/: Sidebar.css  Sidebar.jsx  ThemeSwitcher.css  ThemeSwitcher.jsx  Topbar.css  Topbar.jsx
src/react_client/src/components/mail/: ComposeMail.jsx  CreateLabelModal.jsx  EditLabelModal.css  EditLabelModal.jsx  Editor.jsx  LabelSelectorModal.css  LabelSelectorModal.jsx  MailBody.jsx  MailHeader.jsx  MailItem.css  MailItem.jsx  MailList.css  MailList.jsx  MailView.css  MailView.jsx  RecipientsInput.jsx
src/react_client/src/pages/: AllMailsPage.jsx  DraftsPage.jsx  InboxPage.jsx  LabelPage.jsx  LoginPage.css  LoginPage.jsx  MailLayout.css  MailLayout.jsx  MailPage.jsx  RegisterPage.css  RegisterPage.jsx  SearchResultsPage.jsx  SentPage.jsx  SpamPage.jsx  StarredPage.jsx  TestSidebar.jsx  TrashPage.jsx
src/react_client/src/services/: api.js  authService.js  labelsService.js  lablesSrevice.js  mailsService.js
src/routes/: blacklistRoutes.js  mailsRoutes.js  tokensRoutes.js  usersRoutes.js
src/services/: BlacklistService.js  UserService.js
src/tests/: BloomFilterPersistenceTests.cpp  BloomFilterTest.cpp  RepeatableHashFunctionTest.cpp  ServerTests.cpp  check_url_test.cpp  delete_url_test.cpp
(+16 files in other folders)
